package patterns.strategy;

// Interfaz para estrategias de cálculo de costos
public interface CostoStrategy {
    double calcularCosto();
}